--- a/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
@@ -7,6 +7,8 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <script src="~/dist/index.js"></script>
 </head>
 <body>
     @RenderBody()
