add styles for login view

--- a/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
@@ -1,21 +1,29 @@
 ﻿@model AspNetIdentitySample.WebApplication.ViewModels.LoginViewModel
 
-<h1>ASP.NET Core Identity Sample</h1>
-<p>Please log in</p>
-<form method="post">
-  <div>
-    <input asp-for="Email" type="email" placeholder="Email" />
-    <label asp-for="Email">Email</label>
+<div class="card m-auto mt-3" style="width: 400px;">
+  <div class="card-body">
+    <h3 class="card-title text-center"><span>ASP.NET Core Identity Sample</span></h3>
+    <p class="card-text text-center">Please log in</p>
+
+    <form method="post">
+      <div class="form-floating mb-3">
+        <input class="form-control" asp-for="Email" type="email" placeholder="Email" />
+        <label asp-for="Email">Email</label>
+        <span class="invalid-feedback" asp-validation-for="Email"></span>
+      </div>
+
+      <div class="form-floating mb-3">
+        <input class="form-control" asp-for="Password" type="password" placeholder="Password" />
+        <label asp-for="Password">Password</label>
+        <span class="invalid-feedback" asp-validation-for="Password"></span>
+      </div>
+
+      <div class="form-check mb-3">
+        <input class="form-check-input" asp-for="RememberMe" type="checkbox" />
+        <label class="form-check-label" asp-for="RememberMe">Remember me</label>
+      </div>
+
+      <button class="btn btn-lg btn-primary w-100" type="submit"><span>Log in</span></button>
+    </form>
   </div>
-  <div>
-    <input asp-for="Password" type="password" placeholder="Password" />
-    <label asp-for="Password">Password</label>
-  </div>
-  <div>
-    <input asp-for="RememberMe" type="checkbox" />
-    <label asp-for="RememberMe">Remember me</label>
-  </div>
-  <div>
-    <button type="submit"><span>Log in</span></button>
-  </div>
-</form>
+</div>
