--- a/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
@@ -1,29 +1,29 @@
 ﻿@model AspNetIdentitySample.WebApplication.ViewModels.LoginViewModel
 
-<div class="card m-auto mt-3" style="width: 400px;">
-  <div class="card-body">
-    <h3 class="card-title text-center"><span>ASP.NET Core Identity Sample</span></h3>
-    <p class="card-text text-center">Please log in</p>
+<div class="app-login">
+  <div class="app-login__content">
+    <h3 class="app-login__title"><span>ASP.NET Core Identity Sample</span></h3>
+    <p class="app-login__text">Please log in</p>
 
-    <form method="post">
-      <div class="form-floating mb-3">
-        <input class="form-control" asp-for="Email" type="email" placeholder="Email" />
-        <label asp-for="Email">Email</label>
-        <span class="invalid-feedback" asp-validation-for="Email"></span>
+    <form class="app-login__form app-form" method="post">
+      <div class="app-form__group app-control">
+        <input class="app-control__field" asp-for="Email" type="email" placeholder="Email" />
+        <label class="app-control__label" asp-for="Email">Email</label>
+        <span class="app-control__error" asp-validation-for="Email"></span>
       </div>
 
-      <div class="form-floating mb-3">
-        <input class="form-control" asp-for="Password" type="password" placeholder="Password" />
-        <label asp-for="Password">Password</label>
-        <span class="invalid-feedback" asp-validation-for="Password"></span>
+      <div class="app-form__group app-control form-floating">
+        <input class="app-control__field" asp-for="Password" type="password" placeholder="Password" />
+        <label class="app-control__label" asp-for="Password">Password</label>
+        <span class="app-control__error" asp-validation-for="Password"></span>
       </div>
 
-      <div class="form-check mb-3">
-        <input class="form-check-input" asp-for="RememberMe" type="checkbox" />
-        <label class="form-check-label" asp-for="RememberMe">Remember me</label>
+      <div class="app-form__group app-check">
+        <input class="app-check__field" asp-for="RememberMe" type="checkbox" />
+        <label class="app-check__label" asp-for="RememberMe">Remember me</label>
       </div>
 
-      <button class="btn btn-lg btn-primary w-100" type="submit"><span>Log in</span></button>
+      <button class="app-form__button" type="submit"><span>Log in</span></button>
     </form>
   </div>
 </div>
