remove old style rule

--- a/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
@@ -12,7 +12,7 @@
         <span class="app-control__error" asp-validation-for="Email"></span>
       </div>
 
-      <div class="app-form__group app-control form-floating">
+      <div class="app-form__group app-control">
         <input class="app-control__field" asp-for="Password" type="password" placeholder="Password" />
         <label class="app-control__label" asp-for="Password">Password</label>
         <span class="app-control__error" asp-validation-for="Password"></span>
