--- a/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
@@ -23,7 +23,7 @@
         <label class="app-check__label" asp-for="RememberMe">Remember me</label>
       </div>
 
-      <button class="app-form__button" type="submit"><span>Log in</span></button>
+      <button class="app-form__ok" type="submit"><span>Log in</span></button>
     </form>
   </div>
 </div>
