add base view model for account

--- a/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LoginView.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetIdentitySample.WebApplication.ViewModels.LoginViewModel
+﻿@model AspNetIdentitySample.WebApplication.ViewModels.LoginAccountViewModel
 
 <div class="app-login">
   <div class="app-login__content">
