--- a/src/AspNetIdentitySample.WebApplication/Views/LogoutView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LogoutView.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetIdentitySample.WebApplication.ViewModels.LogoutViewModel
+﻿@model AspNetIdentitySample.WebApplication.ViewModels.LogoutAccountViewModel
 
 <div class="app-login">
   <div class="app-login__content">
