--- a/src/AspNetIdentitySample.WebApplication/ClientApp/src/scss/_app-form.scss
+++ b/src/AspNetIdentitySample.WebApplication/ClientApp/src/scss/_app-form.scss
@@ -3,21 +3,7 @@
     @extend .mb-3;
   }
 
-  &__ok {
+  &__button {
     @extend .btn;
-    @extend .btn-lg;
-    @extend .btn-primary;
-    @extend .w-100;
-  }
-
-  &__cancel {
-    @extend .btn;
-    @extend .btn-lg;
-    @extend .btn-outline-primary;
-    @extend .w-100;
-  }
-
-  &__ok + &__cancel {
-    @extend .mt-3;
   }
 }
