--- a/src/AspNetIdentitySample.WebApplication/ClientApp/src/scss/index.scss
+++ b/src/AspNetIdentitySample.WebApplication/ClientApp/src/scss/index.scss
@@ -1,5 +1,10 @@
 ﻿@import 'bootstrap';
 
+@import 'app';
+@import 'app-header';
+@import 'app-menu';
+@import 'app-profile-menu';
+@import 'app-main';
 @import 'app-login';
 @import 'app-form';
 @import 'app-control';
