--- a/src/AspNetIdentitySample.WebApplication/Views/SignInView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/SignInView.cshtml
@@ -24,6 +24,7 @@
       </div>
 
       <button class="app-signin__ok app-form__button" type="submit"><span>Log in</span></button>
+      <a class="app-signin__cancel app-form__button" href="@Model.ReturnUrl"><span>Cancel</span></a>
     </form>
   </div>
 </div>
