--- a/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
@@ -14,7 +14,7 @@
   <div class="app">
     <div class="app__header app-header">
       <nav class="app-header__content">
-        <a class="app__brand" asp-controller="Home" asp-action="Index"><span>ASP.NET Core Identity Sample</span></a>
+        <a class="app__brand" asp-controller="Home" asp-action="Get"><span>ASP.NET Core Identity Sample</span></a>
 
         <div class="app-header__profile profile-menu">
           <a class="app-profile-menu__toggle" data-bs-toggle="dropdown" aria-expanded="false">
