add styles for access denied

--- a/src/AspNetIdentitySample.WebApplication/Views/AccessDeniedView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/AccessDeniedView.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="alert alert-danger">
-  <h3 class="alert-heading"><span>Access denied!</span></h3>
-  <p>You have no permission to browse this page. Please, sing in an account with the proper permission.</p>
+﻿<div class="app-access-denied">
+  <h3 class="app-access-denied__title"><span>Access denied!</span></h3>
+  <p class="app-access-denied__body">You have no permission to browse this page. Please, sing in an account with the proper permission.</p>
 </div>
