add link to profile

--- a/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
@@ -25,7 +25,7 @@
               <span>@Model.User.Name</span>
             </a>
             <nav class="app-profile-menu__nav dropdown-menu">
-              <a class="app-profile-menu__item"><span>Profile</span></a>
+              <a class="app-profile-menu__item" asp-controller="Profile" asp-action="Get" asp-route-userId="@Model.User.UserId"><span>Profile</span></a>
               <a class="app-profile-menu__item" asp-controller="SignOut" asp-action="Get"><span>Sign out</span></a>
             </nav>
           </div>
