--- a/src/AspNetIdentitySample.WebApplication/Views/ProfileView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/ProfileView.cshtml
@@ -1,1 +1,24 @@
-﻿<h1><span>Profile</span></h1>
+﻿@model AspNetIdentitySample.WebApplication.ViewModels.ProfileViewModel
+
+<div class="app-user">
+  <div class="app-user__content">
+    <h3 class="app-user__title"><span>Your profile:</span></h3>
+
+    <form class="app-user__form app-form" method="post">
+      <div class="app-form__group app-control">
+        <input class="app-control__field" asp-for="Name" type="text" placeholder="Name" />
+        <label class="app-control__label" asp-for="Name">Name</label>
+        <span class="app-control__error" asp-validation-for="Name"></span>
+      </div>
+
+      <div class="app-form__group app-control">
+        <input class="app-control__field" asp-for="Email" type="email" placeholder="Email" />
+        <label class="app-control__label" asp-for="Email">Email</label>
+        <span class="app-control__error" asp-validation-for="Email"></span>
+      </div>
+
+      <button class="app-user__ok app-form__button" type="submit"><span>Ok</span></button>
+      <a class="app-user__cancel app-form__button" asp-controller="Home" asp-action="Get"><span>Cancel</span></a>
+    </form>
+  </div>
+</div>
