add return url for profile

--- a/src/AspNetIdentitySample.WebApplication/Views/ProfileView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/ProfileView.cshtml
@@ -18,7 +18,7 @@
       </div>
 
       <button class="app-user__ok app-form__button" type="submit"><span>Ok</span></button>
-      <a class="app-user__cancel app-form__button" asp-controller="Home" asp-action="Get"><span>Cancel</span></a>
+      <a class="app-user__cancel app-form__button" href="@Model.ReturnUrl"><span>Cancel</span></a>
     </form>
   </div>
 </div>
