--- a/src/AspNetIdentitySample.WebApplication/Views/UserListView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/UserListView.cshtml
@@ -1,5 +1,9 @@
 ﻿@model AspNetIdentitySample.WebApplication.ViewModels.UserListViewModel
 
+<div class="app-action-bar">
+  <a class="app-action-bar__action" asp-controller="User" asp-action="Get" asp-route-returnUrl="@Context.Request.Path"><span>Add</span></a>
+</div>
+
 <table class="app-user-list">
   <thead class="app-user-list__header">
     <tr>
@@ -17,7 +21,7 @@
         <td class="app-user-list__cell app-user-list__cell_email"><span>@user.Email</span></td>
         <td class="app-user-list__cell app-user-list__cell_roles"><span>@user.Roles</span></td>
         <td class="app-user-list__cell app-user-list__cell_actions">
-          <a class="app-user-list__action" href="#"><span>Edit</span></a>
+          <a class="app-user-list__action" asp-controller="User" asp-action="Get" asp-route-userId="@user.UserId" asp-route-returnUrl="@Context.Request.Path"><span>Edit</span></a>
           <a class="app-user-list__action" href="#"><span>Delete</span></a>
         </td>
       </tr>
