fix default page link on layout view

--- a/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
@@ -16,7 +16,7 @@
   <div class="app">
     <div class="app__header app-header">
       <nav class="app-header__content">
-        <a class="app__brand" asp-controller="User" asp-action="Get"><span>ASP.NET Core Identity Sample</span></a>
+        <a class="app__brand" asp-controller="UserList" asp-action="Get"><span>ASP.NET Core Identity Sample</span></a>
 
         @if (Model.User.IsAuthenticated)
         {
