user password for register password inputs

--- a/src/AspNetIdentitySample.WebApplication/Views/RegisterView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/RegisterView.cshtml
@@ -15,13 +15,13 @@
   </div>
 
   <div class="app-form__group app-control">
-    <input class="app-control__field" asp-for="Password" type="text" placeholder="Password" />
+    <input class="app-control__field" asp-for="Password" type="password" placeholder="Password" />
     <label class="app-control__label" asp-for="Password">Password</label>
     <span class="app-control__error" asp-validation-for="Password"></span>
   </div>
 
   <div class="app-form__group app-control">
-    <input class="app-control__field" asp-for="RepeatedPassowrd" type="text" placeholder="Confirm Passowrd" />
+    <input class="app-control__field" asp-for="RepeatedPassowrd" type="password" placeholder="Confirm Passowrd" />
     <label class="app-control__label" asp-for="RepeatedPassowrd">Confirm Passowrd</label>
     <span class="app-control__error" asp-validation-for="RepeatedPassowrd"></span>
   </div>
