add styles for sign up menu

--- a/src/AspNetIdentitySample.WebApplication/ClientApp/src/scss/index.scss
+++ b/src/AspNetIdentitySample.WebApplication/ClientApp/src/scss/index.scss
@@ -4,6 +4,7 @@
 @import 'app-header';
 @import 'app-menu';
 @import 'app-profile-menu';
+@import 'app-signup-menu';
 @import 'app-main';
 @import 'app-login';
 @import 'app-form';
