--- a/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
@@ -32,8 +32,8 @@
         }
         else
         {
-          <div class="app-header__profile">
-            <a class="btn btn-outline-light" asp-controller="Register" asp-action="Get"><span>Sign-up</span></a>
+          <div class="app-header__profile app-signup-menu">
+            <a class="app-signup-menu__action" asp-controller="Register" asp-action="Get"><span>Sign-up</span></a>
           </div>
         }
       </nav>
