rename register to sign up

--- a/src/AspNetIdentitySample.WebApplication/Views/RegisterView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/RegisterView.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetIdentitySample.WebApplication.ViewModels.RegisterUserViewModel
+﻿@model AspNetIdentitySample.WebApplication.ViewModels.SignUpUserViewModel
 
 <form class="app-user app-form" method="post">
 
