--- a/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/LayoutView.cshtml
@@ -33,7 +33,7 @@
         else
         {
           <div class="app-header__profile app-signup-menu">
-            <a class="app-signup-menu__action" asp-controller="SignUp" asp-action="Get"><span>Sign-up</span></a>
+            <a class="app-signup-menu__action" asp-controller="SignUp" asp-action="Get" asp-route-returnUrl="@Context.Request.Path"><span>Sign up</span></a>
           </div>
         }
       </nav>
