--- a/src/AspNetIdentitySample.WebApplication/Views/ProfileView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/ProfileView.cshtml
@@ -10,8 +10,13 @@
     </div>
 
     <div class="app-form__group app-control">
-      <input class="app-control__field" asp-for="Name" type="text" placeholder="Name" />
-      <label class="app-control__label" asp-for="Name">Name</label>
+      <input class="app-control__field" asp-for="FirstName" type="text" placeholder="First Name" />
+      <label class="app-control__label" asp-for="FirstName">First Name</label>
+    </div>
+
+    <div class="app-form__group app-control">
+      <input class="app-control__field" asp-for="LastName" type="text" placeholder="Last Name" />
+      <label class="app-control__label" asp-for="LastName">Last Name</label>
     </div>
 
     <div class="app-profile__buttons app-form__buttons">
