--- a/src/AspNetIdentitySample.WebApplication/Views/UserView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/UserView.cshtml
@@ -9,9 +9,15 @@
   </div>
 
   <div class="app-form__group app-control">
-    <input class="app-control__field" asp-for="Name" type="text" placeholder="Name" />
-    <label class="app-control__label" asp-for="Name">Name</label>
-    <span class="app-control__error" asp-validation-for="Name"></span>
+    <input class="app-control__field" asp-for="FirstName" type="text" placeholder="First Name" />
+    <label class="app-control__label" asp-for="FirstName">First Name</label>
+    <span class="app-control__error" asp-validation-for="FirstName"></span>
+  </div>
+
+  <div class="app-form__group app-control">
+    <input class="app-control__field" asp-for="LastName" type="text" placeholder="Last Name" />
+    <label class="app-control__label" asp-for="LastName">Last Name</label>
+    <span class="app-control__error" asp-validation-for="LastName"></span>
   </div>
 
   <div class="app-user__buttons app-form__buttons">
