update delete user dialog

--- a/src/AspNetIdentitySample.WebApplication/Views/UserListView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/UserListView.cshtml
@@ -24,7 +24,8 @@
             <div class="app-modal modal-dialog">
               <div class="app-modal__content">
                 <div class="app-modal__body">
-                  <p class="app-modal__text">Are you sure you want to delete user (@user.FirstName @user.LastName, @user.Email)?</p>
+                  <p class="app-modal__text">Are you sure you want to delete the following user?</p>
+                  <p class="app-modal__text">@user.FirstName @user.LastName, @user.Email</p>
                 </div>
                 <div class="app-modal__footer">
                   <a class="app-modal__close" data-bs-dismiss="modal"><span>Close</span></a>
