pass rememberme value

--- a/src/AspNetIdentitySample.WebApplication/Views/SignInView.cshtml
+++ b/src/AspNetIdentitySample.WebApplication/Views/SignInView.cshtml
@@ -18,7 +18,7 @@
       </div>
 
       <div class="app-form__group app-check">
-        <input class="app-check__field" asp-for="RememberMe" type="checkbox" />
+        <input class="app-check__field" asp-for="RememberMe"  />
         <label class="app-check__label" asp-for="RememberMe">Remember me</label>
       </div>
 
